updated folder css link

--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -3,7 +3,7 @@
 	<head>
 
 		<title>Angela Dizon</title>
-		<link rel="stylesheet" type="text/css" href="CSS/style.css">
+		<link rel="stylesheet" type="text/css" href="unit_1/css/style.css">
 	
 	</head>
 	
