--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -3,7 +3,8 @@
 	<head>
 
 		<title>Angela Dizon's Portfolio</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css/">
+		<link rel="stylesheet" type="text/css" href="unit_3/css/style.css"/>
+	
 	</head>
 	
 		<body>
@@ -26,8 +27,8 @@
 			</ul>
 
 <!--Contact Section-->
-			Contact me:
-			<a href="mailto:adizon@barkbox.com?Subject=Hello%20from%20your%20website" target="_top">adizon@barkbox.com</a>
+			<h2>Contact me:</h2>
+			<p><a href="mailto:adizon@barkbox.com?Subject=Hello%20from%20your%20website" target="_top">adizon@barkbox.com</a></p>
 	
 		</body>
 	
