--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -3,7 +3,7 @@
 	<head>
 
 		<title>Angela Dizon's Portfolio</title>
-		<link rel="stylesheet" type="text/css" href="unit_3/css/style.css"/>
+		<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	
 	</head>
 	
