--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -2,34 +2,50 @@
 <html>
 	<head>
 
-		<title>Angela Dizon's Portfolio</title>
+		<title>Angela D###n</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	
 	</head>
 	
 		<body>
 	
-			<h1>Angela Dizon's Portfolio</h1>
+			<h1>Angela D##n</h1>
 	
-			<p id="slogan">This is the resume turned website of email marketer Angela Dizon.</p>
+			<p id="slogan">I'm a digital marketer and painter living and working in New York City.</p>
 
-			<img src="images/emoji_heartenvelope.png">
+			<img src="images/emoji_heartenvelope.png" alt="Heart Envelope" title="Hi, I'm Angela!" class="center">
 
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-			<h2>Past Experience</h2>
+<!--Two Columns: Resume or Writing Samples-->
+			<h2>Past Experience —</h2>
 			<ul>
-				<li>[redacted tech company]</li>
-				<li>[redacted beauty company]</li>
-				<li>[redacted media company]</li>
-				<li>[redacted art gallery]</li>
+				<li>[redacted]</li>
+				<li>[redacted]</li>
+				<li>[redacted]</li>
+				<li>[redacted]</li>
 			</ul>
 
-<!--Contact Section-->
-			<h2>Contact me:</h2>
-			<p><a href="mailto:adizon@barkbox.com?Subject=Hello%20from%20your%20website" target="_top">adizon@barkbox.com</a></p>
-	
+<!--Two Columns: About Me-->
+			<h2>About Me —</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat.</p>
+			<p>Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+<!--Contact Me-->
+			<h2>Connect with me:</h2>
+			<p>Email&ensp;<a href="mailto:adizon@barkbox.com?Subject=Hello%20from%20your%20website" target="_top" class="contact">adizon@barkbox.com</a></p>
+			<p>LinkedIn&ensp;<a href="https://www.linkedin.com/" class="contact">Visit ↗</a></p>
+			<p>Instagram&ensp;<a href="https://www.instagram.com/" class="contact">Visit ↗</a></p>
+
+<!--Footer-->
+<hr>
+<p id="footer">© 2020 Angela Dizon</p>
+
 		</body>
 	
 </html>
