--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -13,7 +13,7 @@
 
 		<nav class="navigation">
 			<a href="#">Home</a>
-			<a href="#">Writing</a>
+			<a href="#">Work</a>
 			<a href="#">Library</a>
 		</nav>
 
@@ -21,7 +21,7 @@
 	
 			<h1>Angela Dizon</h1>
 	
-			<p id="slogan">→ I'm an email marketer and creative based in New York City. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud <a href="https://youtu.be/HQFL5FW-AYA">New York City</a>
+			<p id="slogan">→ I'm an email marketer and creative based in New York City. In my free time, I make sites like this. Ut enim ad minim veniam, quis nostrud <a href="https://youtu.be/HQFL5FW-AYA">New York City</a>
 				<br></br>
 			Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
