--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -21,9 +21,9 @@
 	
 			<h1>Angela Dizon</h1>
 	
-			<p id="slogan">→ I'm an email marketer and creative based in New York City. In my free time, I make sites like this. Ut enim ad minim veniam, quis nostrud <a href="https://youtu.be/HQFL5FW-AYA">New York City</a>
-				<br></br>
-			Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+			<p id="slogan">→ I'm a growth email marketer for BARK and a "creative" by night. That means I send emails to potential customers and own a film camera + paint.</a>
+			<br></br>
+			When I'm not peddling goods to dogs, I mostly cook delicious food and make silly sites like this.</p>
 
 		</header>
 
@@ -69,18 +69,16 @@
 			
 				<h2>About Me —</h2>
 		<article class="left">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud <a href="https://generalassemb.ly/">exercitation</a> ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-				<p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>Born in the Manila, I grew up in Chicago, went to school in NYC and stayed here.</p>
+				<p>My background is in technology and direct-to-consumer brands. I've worked at BarkBox, Glossier, Fohr, and David Zwirner Gallery. This website is where I let my creative side run free.</p>
 <br>
 <!--Contact Me-->
 				<h2>Connect with Me</h2>
-				<p>Email&ensp;<a href="mailto:adizon@barkbox.com?Subject=Hello%20from%20your%20website" target="_top" class="contact">donotemail@gmail.com</a></p>
-				<p>LinkedIn&ensp;<a href="https://www.linkedin.com/" class="contact">Visit ↗</a></p>
-				<p>Instagram&ensp;<a href="https://www.instagram.com/" class="contact">Visit ↗</a></p>
+				<aside>
+				<p>Email&ensp;<a href="mailto:adizon@barkbox.com?Subject=Hello%20from%20your%20website" target="_top" class="contact">adizon@barkbox.com</a></p>
+				<p>LinkedIn&ensp;<a href="https://www.linkedin.com/" class="contact">@angeladizon</a></p>
+				<p>Instagram&ensp;<a href="https://www.instagram.com/" class="contact">@barkbox</a></p>
+				</aside>
 			</article>
 
 <!--About Me Photo-->
