--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -31,7 +31,7 @@
 		
 		<section class="two_column, clearfix">
 
-				<h2>Past Experience —</h2>
+				<h2>Past Experience ——</h2>
 
 			<article class="left">
 				<h3>Company</h3>
@@ -67,7 +67,7 @@
 		<section class="two_column, clearfix">
 
 			
-				<h2>About Me —</h2>
+				<h2>About Me ——</h2>
 		<article class="left">
 				<p>Born in the Manila, I grew up in Chicago, went to school in NYC and stayed here.</p>
 				<p>My background is in technology and direct-to-consumer brands. I've worked at BarkBox, Glossier, Fohr, and David Zwirner Gallery. This website is where I let my creative side run free.</p>
