updates to html and css

--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -31,7 +31,7 @@
 		
 		<section class="two_column, clearfix">
 
-				<h2>Past Experience ——</h2>
+				<h2>Past Experience —</h2>
 
 			<article class="left">
 				<h3>Company</h3>
@@ -67,13 +67,13 @@
 		<section class="two_column, clearfix">
 
 			
-				<h2>About Me ——</h2>
+				<h2>About Me —</h2>
 		<article class="left">
 				<p>Born in the Manila, I grew up in Chicago, went to school in NYC and stayed here.</p>
 				<p>My background is in technology and direct-to-consumer brands. I've worked at BarkBox, Glossier, Fohr, and David Zwirner Gallery. This website is where I let my creative side run free.</p>
 <br>
 <!--Contact Me-->
-				<h2>Connect with Me</h2>
+				<h2>Link 'n' Build</h2>
 				<aside>
 				<p>Email&ensp;<a href="mailto:adizon@barkbox.com?Subject=Hello%20from%20your%20website" target="_top" class="contact">adizon@barkbox.com</a></p>
 				<p>LinkedIn&ensp;<a href="https://www.linkedin.com/" class="contact">@angeladizon</a></p>
