--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -73,7 +73,7 @@
 				<p>My background is in technology and direct-to-consumer brands. I've worked at BarkBox, Glossier, Fohr, and David Zwirner Gallery. This website is where I let my creative side run free.</p>
 <br>
 <!--Contact Me-->
-				<h2>Link 'n' Build</h2>
+				<h2>Connect</h2>
 				<aside>
 				<p>Email&ensp;<a href="mailto:adizon@barkbox.com?Subject=Hello%20from%20your%20website" target="_top" class="contact">adizon@barkbox.com</a></p>
 				<p>LinkedIn&ensp;<a href="https://www.linkedin.com/" class="contact">@angeladizon</a></p>
