final project responsiveness changes

--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -21,7 +21,7 @@
 	
 			<h1>Angela Dizon</h1>
 	
-			<p id="slogan">→ I'm a growth email marketer for BARK and a "creative" by night. That means I send emails to potential customers and own a film camera + paint.</a>
+			<p id="slogan">→ I'm a growth email marketer for BarkBox and a creative by nature. That means I strategize and build emails for pet lovers nationwide while painting and making pictures on the side.
 			<br></br>
 			When I'm not peddling goods to dogs, I mostly cook delicious food and make silly sites like this.</p>
 
